# MessageEncryption

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Controller.cpp  Controller.hpp  Dispatcher.cpp  Dispatcher.hpp  main.cpp
src/Algorithm/: AddOneCharacter.cpp  AddOneCharacter.hpp  CMakeLists.txt  IAlgorithm.hpp
src/Common/: CMakeLists.txt  CipherCommand.cpp  CipherCommand.hpp  Logger.hpp
src/File/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp
test/: CMakeLists.txt
test/Algorithm/: AddOneCharacterTest.cpp  CMakeLists.txt
